# Curator

./: .gitattributes  .gitignore  BUILD_TRACKER.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DESIGN_PHASE_DELTA.md  ECOSYSTEM_DESIGN.md  README.md  pyproject.toml
.githooks/: README.md  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: test.yml
Github/: CURATOR_RESEARCH_NOTES.md  PROCUREMENT_INDEX.md
docs/: AD_ASTRA_CI_AUDIT.md  AD_ASTRA_CONSTELLATION.md  ALL_FILES.md  APEX_INFO_REQUEST.md  APEX_INFO_RESPONSE.md  ATRIUM_PLUGIN_AUDIT.md  BUILDING_BLOCKS.md  CLI_COVERAGE_ARC_SCOPE.md  CONCLAVE_LENSES_v2.md  CONCLAVE_PROPOSAL.md  CONCLAVE_READINESS_REPORT.md  COVERAGE_SWEEP_SCOPE.md  CURATORPLUG_ATRIUM_CITATION_DESIGN.md  CURATOR_AUDIT_EVENT_HOOKSPEC_DESIGN.md  CURATOR_INVENTORY.md  CURATOR_MCP_HTTP_AUTH_DESIGN.md  CURATOR_MCP_SERVER_DESIGN.md  DEFERRED_DECISIONS.md  DIALOGS_DECOMPOSITION.md  ENGINEERING_DOCTRINE.md  FEATURE_TODO.md  GUI_COVERAGE_ARC_SCOPE.md  GUI_TESTING_STRATEGY.md  MID_SIZE_SERVICES_SWEEP_SCOPE.md  MIGRATION_PHASE_GAMMA_SCOPE.md  MUTATION_TESTING_DEFERRED.md  MUTATION_TESTING_REPORT.md  NESTEGG_TRIGGER_STATUS.md  NEXT_SESSION_CHECKLIST.md  PHASE_BETA_LSH.md  PHASE_BETA_WATCH.md  PLATFORM_SCOPE.md  PLUGINS_MCP_SWEEP_SCOPE.md  PLUGIN_INIT_HOOKSPEC_DESIGN.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v2.0_DRAFT.md  ROADMAP.md  ROUND_3_LESSONS_RETROSPECTIVE.md  STORAGE_SWEEP_SCOPE.md  TRACER_PHASE_2_DESIGN.md  (+6 more)
docs/design/: GUI_V2_DESIGN.md
docs/lessons/: 2026-05-09_install_mcp_session.md
docs/releases/: v1.7.0.md  v1.7.1.md  v1.7.10.md  v1.7.100.md  v1.7.101.md  v1.7.102.md  v1.7.103.md  v1.7.104.md  v1.7.105.md  v1.7.106.md  v1.7.107.md  v1.7.108.md  v1.7.109.md  v1.7.11.md  v1.7.110.md  v1.7.111.md  v1.7.112.md  v1.7.113.md  v1.7.114.md  v1.7.115.md  v1.7.116.md  v1.7.117.md  v1.7.118.md  v1.7.119.md  v1.7.12.md  v1.7.120.md  v1.7.121.md  v1.7.122.md  v1.7.123.md  v1.7.124.md  v1.7.125.md  v1.7.126.md  v1.7.127.md  v1.7.128.md  v1.7.129.md  v1.7.13.md  v1.7.130.md  v1.7.131.md  v1.7.132.md  v1.7.133.md  (+178 more)
examples/: watch_demo.py
installer/: Install-Curator.bat  Install-Curator.ps1  README.md
scripts/: ci_diag.ps1  ci_diag.sh  run_pytest_detached.cmd  run_pytest_detached.ps1  setup_dev_env.py  setup_dev_hooks.ps1  setup_dev_hooks.sh  setup_gdrive_source.py
scripts/workflows/: 01_initial_scan.bat  01_initial_scan.ps1  02_find_duplicates.bat  02_find_duplicates.ps1  03_cleanup_junk.bat  03_cleanup_junk.ps1  04_audit_summary.bat  04_audit_summary.ps1  05_health_check.bat  05_health_check.ps1  README.md  _common.ps1
src/curator/: __init__.py  py.typed
src/curator/_compat/: __init__.py  datetime.py
src/curator/_vendored/: LICENSE-PPDEEP.txt  LICENSE-SEND2TRASH.txt  __init__.py
src/curator/cli/: __init__.py  main.py  mcp_keys.py  mcp_orphans.py  runtime.py  util.py
src/curator/config/: __init__.py  defaults.py
src/curator/gui/: __init__.py  cleanup_signals.py  dialogs.py  launcher.py  lineage_view.py  main_window.py  migrate_signals.py  models.py  scan_signals.py
src/curator/mcp/: __init__.py  auth.py  middleware.py  server.py  tools.py
src/curator/models/: __init__.py  audit.py  base.py  bundle.py  file.py  jobs.py  lineage.py  (+5 more)
tests/: conftest.py
tests/gui/: test_gui_audit.py  test_gui_bundle_editor.py  test_gui_inbox.py  test_gui_inspect.py  test_gui_lineage.py  test_gui_migrate.py  test_gui_models.py  test_gui_mutations.py  test_gui_settings.py  test_gui_share_visibility_and_autostrip.py  test_gui_source_edit.py
tests/integration/: __init__.py  test_cli_bundles.py  test_cli_cleanup.py  test_cli_cleanup_duplicates.py  test_cli_csv_dialect.py  test_cli_csv_list_commands.py  test_cli_gdrive_auth.py  test_cli_migrate.py  test_cli_organize.py  test_cli_organize_code.py  test_cli_read_commands.py  test_cli_safety.py  test_cli_scan_group_doctor.py  test_cli_sources.py  test_cli_stage.py  test_cli_trash_restore.py  test_infrastructure_audit.py  test_lineage_lsh_equivalence.py  test_organize_document.py  test_organize_flow.py  test_organize_mb_enrichment.py  test_organize_music.py  test_organize_photo.py  test_recycle_bin.py  test_scan_flow.py  test_scan_paths.py  test_trash_restore.py  test_watch_smoke.py
tests/perf/: __init__.py  test_lineage_throughput.py
tests/property/: __init__.py  test_lineage_normalization.py
tests/unit/: __init__.py  test_audit_coverage.py  test_audit_iter_query.py  test_audit_writer.py  test_bundle_service.py  test_classification_coverage.py  test_classify_filetype_coverage.py  test_cleanup.py  test_cleanup_duplicates.py  test_cleanup_fuzzy_duplicates.py  test_cleanup_index_sync.py  test_cli_audit_coverage.py  test_cli_audit_export_coverage.py  test_cli_audit_summary_coverage.py  test_cli_bundles_coverage.py  test_cli_cleanup_coverage.py  test_cli_doctor_safety_coverage.py  test_cli_export_clean_coverage.py  test_cli_forecast_coverage.py  test_cli_gui_gdrive_coverage.py  test_cli_main_final_cleanup_coverage.py  test_cli_mcp_keys_coverage.py  test_cli_mcp_orphans_coverage.py  test_cli_migrate_part1_coverage.py  test_cli_migrate_part2_coverage.py  test_cli_organize_coverage.py  test_cli_runtime_coverage.py  test_cli_scan_group_lineage_coverage.py  test_cli_scan_pii_coverage.py  test_cli_setup_inspect_coverage.py  test_cli_sources_config_coverage.py  test_cli_sources_simple_coverage.py  test_cli_status_app_coverage.py  test_cli_tier_coverage.py  test_cli_trash_restore_coverage.py  test_cli_util.py  test_cli_util_coverage.py  test_cli_watch_coverage.py  test_code_project.py  test_code_project_coverage.py  (+116 more)
(+80 files in other folders)
